--- a/essal/templates/pages/about-us.html
+++ b/essal/templates/pages/about-us.html
@@ -16,7 +16,7 @@
                        <div class="tabs-container">
                             <ul class="nav nav-tabs text-center">
                                 <li class="active"><a href="/about-us">عن هُدهُد</a></li>
-                                <li><a href="/team.html">طاقم العمل</a></li>
+{#                                <li><a href="/team.html">طاقم العمل</a></li>#}
                                 <!--<li><a href="/testimonial.html">روايات هُدهُد</a></li>-->
                                 <li class=""><a href="/contact-us">اتصل بنا</a></li>
                             </ul>
