--- a/essal/templates/pages/team_deleted.html
+++ b/essal/templates/pages/team_deleted.html
@@ -15,7 +15,7 @@
 			<div class="tabs-container">
 			<ul class="nav nav-tabs text-center">
 				<li><a href="/about-us">عن هُدهُد</a></li>
-				<li class="active"><a href="/team">طاقم العمل</a></li>
+{#				<li class="active"><a href="/team">طاقم العمل</a></li>#}
 				<!--<li><a href="/testimonial">روايات هُدهُد</a></li>-->
 				<li><a href="/contact-us">اتصل بنا</a></li>
 			</ul>
